# envy

./: .env.example  Cargo.toml  README.md  config.toml  pyproject.toml  setup.py
bot/: asyncbot.py  bot.py  envy.py  transport.py
bot/util/: base.py
config/: safelist  shitlist
configs/: config.json
env/: pyvenv.cfg
envy/: bot.py  config.py  main.py
envy/bncs/: buffer.py  client.py  pkts.py
envy/util/: buffer.py  client.py
etc/: access.json  config.example.json  config.json
queue/: async_queue.py  queue.py
scripts/: setup
src/: bot.py  bot.rs  config.rs  log.py  log.rs  main.py  main.rs
src/bnet/: conn.rs
src/objects/: channel.py  user.py
src/util/: config.py  log.py
